# eut_speech_audio_processing

./: .gitignore  .pre-commit-config.yaml  CI_CD_SETUP.md  PRECOMMIT.md  README.md  pyproject.toml
.history/: README_20250924175517.md
Docker/: .env.example  Dockerfile  Dockerfile.arm  android-docker-compose.yaml  arm-docker-compose.yaml  build_container.sh  ci_cd_coverage.sh  cyclonedds_wifi.xml  deps.repos  dev-docker-compose.yaml  docker-compose.yaml  dockerhub_push.sh  download_pyannote_models.py  entrypoint.sh  eth-docker-compose.yaml  quick_test_coverage.sh  raspy-docker-compose.yaml  requirements.txt  requirements_arm.txt  requirements_arm_thor.txt  requirements_diarization.txt  requirements_general.txt  (+3 more)
src/audio_stream_manager/: .coveragerc  README.md  package.xml  pytest.ini  setup.cfg  setup.py  workflow_audio_capturing.mmd  workflow_save_mp3.mmd
src/audio_stream_manager/audio_stream_manager/: android_audio_bridge.py  audio_capture_engine.py  audio_capturing.py  audio_capturing_automatic_device.py  audio_capturing_select_device.py  audio_device_monitor.py  audio_to_mp3.py  query_devices.py  ros_audio_source.py  save_mp3.py
src/audio_stream_manager/audio_stream_manager/utils/: audio_models.py  audio_to_mp3_utils.py  audio_utils.py  sound_device_manager.py
src/audio_stream_manager/config/: audio_params.yaml
src/audio_stream_manager/launch/: audio_stream_android.launch.py  audio_stream_manager.launch.py
src/audio_stream_manager/test/: README.md  conftest.py  test_audio_capturing_node.py  test_audio_stream_integration.py  test_save_mp3.py  test_smoke.py
(+61 files in other folders)
